--- a/styles/rezepte.css
+++ b/styles/rezepte.css
@@ -34,8 +34,14 @@
 }
 
 .tag-add-item {
-    padding: .375rem .75rem;
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     border: var(--bs-border-width) solid var(--bs-border-color);
     border-radius: var(--bs-border-radius);
+}
+
+.tag-add-item button {
+    justify-self: flex-end;
 }
