--- a/styles/rezepte.css
+++ b/styles/rezepte.css
@@ -39,7 +39,7 @@
     border-radius: var(--bs-border-radius);
 }
 
-.tag-add-item {
+.add-single-item {
     justify-content: space-between;
     display: flex;
     flex-direction: row;
