--- a/styles/rezepte.css
+++ b/styles/rezepte.css
@@ -64,6 +64,32 @@
 }
 
 
+.rezept-anleitung {
+    display: grid;
+    grid-template-columns: 35% 65%;
+}
+
+
+.rezept-zutaten {
+    display: grid;
+    grid-template-columns: 15% 25% auto;
+}
+
+.rezept-zutaten span {
+    padding: 0 0.25rem;
+}
+
+.rezept-details {
+    display: flex;
+    justify-content: space-between;
+}
+
+.rezept-tags {
+    display: flex;
+    gap: .5rem;
+    flex-wrap: wrap;
+}
+
 
 .wrapper {
     max-height: 70vh;
@@ -76,6 +102,10 @@
     grid-template-columns: 60% 40%;
 }
 
+.rezept-container {
+    max-width: 1000px;
+}
+
 @media only screen and (max-width: 768px) {
     .zutaten-add {
         grid-template-columns: 15% 25% auto 56px;
@@ -85,6 +115,11 @@
     }
     .tag-add {
         grid-template-columns: 70% 30%;
+    }
+    .rezept-anleitung {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
     }
 
 }
