--- a/styles/rezepte.css
+++ b/styles/rezepte.css
@@ -64,11 +64,15 @@
 }
 
 
-.rezept-anleitung {
+.rezept-wrapper {
     display: grid;
-    grid-template-columns: 35% 65%;
+    grid-template-columns: 40% 60%;
 }
 
+.rezept-anleitung {
+    display: flex;
+    flex-direction: column;
+}
 
 .rezept-zutaten {
     display: grid;
@@ -79,15 +83,16 @@
     padding: 0 0.25rem;
 }
 
-.rezept-details {
-    display: flex;
-    justify-content: space-between;
-}
-
 .rezept-tags {
     display: flex;
     gap: .5rem;
     flex-wrap: wrap;
+}
+
+.rezept-details {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 
@@ -116,10 +121,8 @@
     .tag-add {
         grid-template-columns: 70% 30%;
     }
-    .rezept-anleitung {
+    .rezept-wrapper {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
     }
-
 }
